<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.aplicacion.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_noticias"
        android:name="com.example.aplicacion.ui.noticias.NoticiasFragment"
        android:label="@string/title_noticias"
        tools:layout="@layout/fragment_noticias" />

    <fragment
        android:id="@+id/navigation_triaje"
        android:name="com.example.aplicacion.ui.triaje.TriajeFragment"
        android:label="@string/title_triaje"
        tools:layout="@layout/fragment_triaje" />

    <fragment
        android:id="@+id/navigation_mapa"
        android:name="com.example.aplicacion.ui.mapa.MapaFragment"
        android:label="@string/title_mapa"
        tools:layout="@layout/fragment_mapa" />
</navigation>
