<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.test.Test3Activity">

    <TextView
        android:id="@+id/lbTest3Tit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/tit_triaje3"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.364"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/lbTest3sub1"

        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/tit_triaje3sub1"
        android:layout_width="350dp"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbTest3Tit" />

    <RadioGroup
        android:id="@+id/radioGroup5"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.215"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbTest3sub1">

        <RadioButton
            android:id="@+id/rdbtnT3Si"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Si" />

        <RadioButton
            android:id="@+id/rdbtnT3No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="No" />
    </RadioGroup>

    <TextView
        android:id="@+id/lbTest3sub2"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/tit_triaje3sub2"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup5" />

    <CheckBox
        android:id="@+id/ckbCond1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="Obesidad"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.203"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lbTest3sub2" />

    <CheckBox
        android:id="@+id/ckbCond8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Cancer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond7" />

    <CheckBox
        android:id="@+id/ckbCond4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Diabetes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.201"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond3" />

    <CheckBox
        android:id="@+id/ckbCond7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Insuficiencia renal crónica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.305"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond6" />

    <CheckBox
        android:id="@+id/ckbCond3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Asma"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond2" />

    <CheckBox
        android:id="@+id/ckbCond6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enfermedad cardiovascular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.317"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond5" />

    <CheckBox
        android:id="@+id/ckbCond5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hipertención arterial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.269"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond4" />

    <CheckBox
        android:id="@+id/ckbCond2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Enfermedad pulmonar crónica"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.358"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond1" />

    <Button
        android:id="@+id/btnTest3Next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Continuar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ckbCond8"
        app:layout_constraintVertical_bias="0.387" />

</androidx.constraintlayout.widget.ConstraintLayout>